--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,5 @@
 @import "tailwindcss";
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-a {
-    text-decoration: none;
+    font-family: "Times New Roman", serif;
 }
