add docker prod

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,11 @@
 * {
     font-family: "Times New Roman", serif;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+.scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
